--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/styles.css" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+        integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 </head>
 
 <body>
@@ -97,7 +100,7 @@
                             until she opened the Artist FRAMING Galley in 2004. She now
                             rotates her present work in her home gallery.
                         </p>
-                        <button type="button" class="btn btn-custom">
+                        <button type="button" class="btn btn-custom mb-5">
                             <span>LEARN MORE</span>
                         </button>
                     </div>
@@ -107,10 +110,200 @@
     </section>
 
     <!-- gallery section -->
+    <section class="gallery-section">
+        <div class="page-content page-container d-flex flex-column" id="page-content">
+            <div class="caption" style="margin: 100px auto 0 ;">
+                <span>MARILEE'S WORK</span>
+                <div class="vertical-line">
+                    <hr />
+                </div>
+            </div>
+            <h2 style="margin-left: -70px;"><span style="color: #445296;">Art</span> <span
+                    style="color: #ae0235;">Gallery</span></h2>
+            <div class="padding">
+                <div class="row container-fluid">
+                    <div class="owl-carousel">
+                        <div class="item">
+                            <img src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1557204140/banner_12.jpg"
+                                alt="image" />
+                            <div class="item-bottom white">
+                                <span>Example</span>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <img src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1557204172/banner_2.jpg"
+                                alt="image" />
+                            <div class="item-bottom white">
+                                <span>Example</span>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <img src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1557204663/park-4174278_640.jpg"
+                                alt="image" />
+                            <div class="item-bottom white">
+                                <span>Example</span>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <img src="http://www.urbanui.com/fily/template/images/carousel/banner_2.jpg" alt="image" />
+                            <div class="item-bottom white">
+                                <span>Example</span>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <img src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1557204172/banner_2.jpg"
+                                alt="image" />
+                            <div class="item-bottom white">
+                                <span>Example</span>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <img src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1557204663/park-4174278_640.jpg"
+                                alt="image" />
+                            <div class="item-bottom white">
+                                <span>Example</span>
+                            </div>
+                        </div>
+                        <div class="item"> <img src="http://www.urbanui.com/fily/template/images/carousel/banner_2.jpg"
+                                alt="image" />
+                            <div class="item-bottom white">
+                                <span>Example</span>
+                            </div>
+                        </div>
+                        <div class="item"> <img src="http://www.urbanui.com/fily/template/images/carousel/banner_2.jpg"
+                                alt="image" />
+                            <div class="item-bottom white">
+                                <span>Example</span>
+                            </div>
+                        </div>
+                        <div class="item"> <img src="http://www.urbanui.com/fily/template/images/carousel/banner_2.jpg"
+                                alt="image" />
+                            <div class="item-bottom white">
+                                <span>Example</span>
+                            </div>
+                        </div>
+                        <div class="item"> <img src="http://www.urbanui.com/fily/template/images/carousel/banner_2.jpg"
+                                alt="image" />
+                            <div class="item-bottom white">
+                                <span>Example</span>
+                            </div>
+                        </div>
+                        <div class="item"> <img src="http://www.urbanui.com/fily/template/images/carousel/banner_2.jpg"
+                                alt="image" />
+                            <div class="item-bottom white">
+                                <span>Example</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button type="button" class="btn btn-custom" style="max-width: 200px; margin: 20px auto 100px">
+                <span>VIEW ALL</span>
+            </button>
+        </div>
+    </section>
+
+    <!-- contact section -->
     <section>
-        <div class="thumbnails">
-            <a href="#"><img src="https://source.unsplash.com/featured/?street" alt=""></a>
-            <a href="#"><img src="https://source.unsplash.com/featured/?bird" alt=""></a>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-7 mx-auto mt-5 text-center">
+                    <div class="section-title">
+                        <div class="caption" style="justify-content: center">
+                            <span>PAINTINGS AUCTIONING</span>
+                            <div class="vertical-line">
+                                <hr />
+                            </div>
+                        </div>
+                        <h2><span style="color: #445296;">Lee's </span> <span style="color: #ae0235;">Marketplace</span>
+                        </h2>
+                        <p style="max-width: 650px; margin: 30px auto">
+                            We are listing some artworks and paintings for sale on digital marketplaces OpenSea.io, as
+                            NFT's on the Ethereum ETH Blockchain.
+                        </p>
+                        <button type="button" class="btn btn-custom mb-5">
+                            <span>LEARN MORE</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 col-sm-12 px-0">
+                    <iframe class="w-100 h-100"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3547.438134937163!2d-80.24040894903311!3d27.236784982905675!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88dee7a3fb2cc37b%3A0xa21f2f9d805b3229!2s1052%20NE%20Country%20Way%2C%20Jensen%20Beach%2C%20FL%2034957%2C%20USA!5e0!3m2!1sen!2s!4v1630417813783!5m2!1sen!2s"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                </div>
+                <div class="col-md-6 col-sm-12 px-0" style="background-color: #ae0241; color: white">
+                    <div class="section-title" style="margin: 130px">
+                        <div class="caption" style="color: white">
+                            <span>GET IN TOUCH</span>
+                            <div class="vertical-line">
+                                <hr style="border-color: white" />
+                            </div>
+                        </div>
+                        <h2><span style="color: white;">Contact </span> <span style="color: white;">Us</span>
+                        </h2>
+                        <p style="max-width: 650px; margin: 30px 0">
+                            <i class="fas fa-map-marker-alt"></i> &nbsp;&nbsp;Marilee Lee
+                            <br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                            1052 Northeast Country Way, <br />
+                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Jensen Beach FL 34957
+                        </p>
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <button type="button" class="btn btn-custom mb-5">
+                            <span>GET DIRECTION</span>
+                        </button>
+                        <p>
+                            <i class="fas fa-phone"></i></i> &nbsp;&nbsp;(772) 225 2500
+                        </p>
+                        <p>
+                            <i class="far fa-envelope"></i> &nbsp;&nbsp;artistWormhole@gmail.com
+                        </p>
+                        <p>
+                            <i class="far fa-clock"></i> &nbsp;&nbsp;Hours of
+                            Operations<br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;By Chance or
+                            by appointment
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- footer section -->
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="footer col-md-3 mx-auto">
+                    <img class="logo" src="assets/logo.png" alt="logo" />
+                </div>
+                <div class="col-md-7">
+                    <ul class="footer ml-auto" style="list-style: none">
+                        <li class="footer-item">
+                            <a class="footer-link" href="#">HOME</a>
+                        </li>
+                        <li class="footer-item">
+                            <a class="footer-link" href="#">ABOUT</a>
+                        </li>
+                        <li class="footer-item">
+                            <a class="footer-link" href="#">GALLERY</a>
+                        </li>
+                        <li class="footer-item">
+                            <a class="footer-link" href="#">CONTACT</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-2">
+                    <ul class="footer" style="list-style: none">
+                        <li><i class="fab fa-facebook-f footer-icon"></i></li>
+                        <li><i class="fab fa-twitter footer-icon"></i></li>
+                        <li><i class="fab fa-instagram footer-icon"></i></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+
+            </div>
         </div>
     </section>
 
@@ -126,6 +319,27 @@
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
     <script src="js/scripts.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.js"></script>
+    <script>
+        //Jquery auto height
+        $(document).ready(function () {
+            $(".owl-carousel").owlCarousel({
+
+                autoPlay: 3000,
+                items: 4,
+                itemsDesktop: [1199, 3],
+                itemsDesktopSmall: [979, 3],
+                center: true,
+                nav: true,
+                loop: true,
+                responsive: {
+                    600: {
+                        items: 4
+                    }
+                }
+            });
+        });
+    </script>
 </body>
 
 </html>
