update the gallery

--- a/index.html
+++ b/index.html
@@ -33,23 +33,23 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">HOME</a>
+                    <a class="nav-link" href="#home">HOME</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">ABOUT</a>
+                    <a class="nav-link" href="#about">ABOUT</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">GALLERY</a>
+                    <a class="nav-link" href="#gallery">GALLERY</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">CONTACT</a>
+                    <a class="nav-link" href="#contact">CONTACT</a>
                 </li>
             </ul>
         </div>
     </nav>
 
     <!-- header section -->
-    <section class="header">
+    <section class="header" id="home">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-7 col-sm-6 col-xs-12 headerOne">
@@ -78,7 +78,7 @@
     </section>
 
     <!-- book section -->
-    <section>
+    <section id="about">
         <div class="container">
             <div class="row book">
                 <div class="col-md-6 col-sm-6" style="width: 90%;">
@@ -110,7 +110,7 @@
     </section>
 
     <!-- gallery section -->
-    <section class="gallery-section">
+    <section class="gallery-section" id="gallery">
         <div class="page-content page-container d-flex flex-column" id="page-content">
             <div class="caption" style="margin: 100px auto 0 ;">
                 <span>MARILEE'S WORK</span>
@@ -124,71 +124,77 @@
                 <div class="row container-fluid">
                     <div class="owl-carousel">
                         <div class="item">
-                            <img src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1557204140/banner_12.jpg"
+                            <img src="https://img1.wsimg.com/isteam/ip/78d8a94b-dc58-4231-9e31-abc1931c8c68/The%20Kiss.jpg/:/cr=t:5.36%25,l:5.36%25,w:89.29%25,h:89.29%25/rs=w:1300px,h:800px"
                                 alt="image" />
                             <div class="item-bottom white">
                                 <span>Example</span>
                             </div>
                         </div>
                         <div class="item">
-                            <img src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1557204172/banner_2.jpg"
+                            <img src="https://img1.wsimg.com/isteam/ip/78d8a94b-dc58-4231-9e31-abc1931c8c68/To%20Bee%20or%20not%20to%20Bee.jpg/:/rs=w:1300px,h:800px"
                                 alt="image" />
                             <div class="item-bottom white">
                                 <span>Example</span>
                             </div>
                         </div>
                         <div class="item">
-                            <img src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1557204663/park-4174278_640.jpg"
+                            <img src="https://img1.wsimg.com/isteam/ip/78d8a94b-dc58-4231-9e31-abc1931c8c68/Where%20are%20the%20babies%20medium.jpg/:/cr=t:5.36%25,l:5.36%25,w:89.29%25,h:89.29%25/rs=w:1300px,h:800px"
                                 alt="image" />
                             <div class="item-bottom white">
                                 <span>Example</span>
                             </div>
                         </div>
                         <div class="item">
-                            <img src="http://www.urbanui.com/fily/template/images/carousel/banner_2.jpg" alt="image" />
-                            <div class="item-bottom white">
-                                <span>Example</span>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <img src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1557204172/banner_2.jpg"
+                            <img src="https://img1.wsimg.com/isteam/ip/78d8a94b-dc58-4231-9e31-abc1931c8c68/Liberty%20looking%20for%20Peace.jpg/:/cr=t:0%25,l:0%25,w:100%25,h:100%25/rs=w:1300px,h:800px"
                                 alt="image" />
                             <div class="item-bottom white">
                                 <span>Example</span>
                             </div>
                         </div>
                         <div class="item">
-                            <img src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1557204663/park-4174278_640.jpg"
+                            <img src="https://img1.wsimg.com/isteam/ip/78d8a94b-dc58-4231-9e31-abc1931c8c68/susan%20fairy%20in%20garden.jpg/:/cr=t:0%25,l:0%25,w:100%25,h:100%25/rs=w:1300px,h:800px"
                                 alt="image" />
                             <div class="item-bottom white">
                                 <span>Example</span>
                             </div>
                         </div>
-                        <div class="item"> <img src="http://www.urbanui.com/fily/template/images/carousel/banner_2.jpg"
+                        <div class="item">
+                            <img src="https://img1.wsimg.com/isteam/ip/78d8a94b-dc58-4231-9e31-abc1931c8c68/The%20Take%200ver%20Plant.jpg/:/cr=t:0%25,l:0%25,w:100%25,h:100%25/rs=w:1300px,h:800px"
                                 alt="image" />
                             <div class="item-bottom white">
                                 <span>Example</span>
                             </div>
                         </div>
-                        <div class="item"> <img src="http://www.urbanui.com/fily/template/images/carousel/banner_2.jpg"
+                        <div class="item"> <img
+                                src="https://img1.wsimg.com/isteam/ip/78d8a94b-dc58-4231-9e31-abc1931c8c68/100_2234.JPG/:/rs=w:1300px,h:800px"
                                 alt="image" />
                             <div class="item-bottom white">
                                 <span>Example</span>
                             </div>
                         </div>
-                        <div class="item"> <img src="http://www.urbanui.com/fily/template/images/carousel/banner_2.jpg"
+                        <div class="item"> <img
+                                src="https://img1.wsimg.com/isteam/ip/78d8a94b-dc58-4231-9e31-abc1931c8c68/Life%20in%20the%20Rainbow.jpg/:/cr=t:0%25,l:0%25,w:100%25,h:100%25/rs=w:1300px,h:800px"
                                 alt="image" />
                             <div class="item-bottom white">
                                 <span>Example</span>
                             </div>
                         </div>
-                        <div class="item"> <img src="http://www.urbanui.com/fily/template/images/carousel/banner_2.jpg"
+                        <div class="item"> <img
+                                src="https://img1.wsimg.com/isteam/ip/78d8a94b-dc58-4231-9e31-abc1931c8c68/grab%20the%20tale.jpg/:/cr=t:0%25,l:0%25,w:100%25,h:100%25/rs=w:1300px,h:800px"
                                 alt="image" />
                             <div class="item-bottom white">
                                 <span>Example</span>
                             </div>
                         </div>
-                        <div class="item"> <img src="http://www.urbanui.com/fily/template/images/carousel/banner_2.jpg"
+                        <div class="item"> <img
+                                src="https://img1.wsimg.com/isteam/ip/78d8a94b-dc58-4231-9e31-abc1931c8c68/6%20flow%20facbook.jpg/:/cr=t:0%25,l:0%25,w:100%25,h:100%25/rs=w:1300px,h:800px"
+                                alt="image" />
+                            <div class="item-bottom white">
+                                <span>Example</span>
+                            </div>
+                        </div>
+                        <div class="item"> <img
+                                src="https://img1.wsimg.com/isteam/ip/78d8a94b-dc58-4231-9e31-abc1931c8c68/awh%206.jpg/:/rs=w:1300px,h:800px"
                                 alt="image" />
                             <div class="item-bottom white">
                                 <span>Example</span>
@@ -204,7 +210,7 @@
     </section>
 
     <!-- contact section -->
-    <section>
+    <section id="contact">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-7 mx-auto mt-5 text-center">
@@ -280,16 +286,16 @@
                 <div class="col-md-7">
                     <ul class="footer ml-auto" style="list-style: none">
                         <li class="footer-item">
-                            <a class="footer-link" href="#">HOME</a>
+                            <a class="footer-link" href="#home">HOME</a>
                         </li>
                         <li class="footer-item">
-                            <a class="footer-link" href="#">ABOUT</a>
+                            <a class="footer-link" href="#about">ABOUT</a>
                         </li>
                         <li class="footer-item">
-                            <a class="footer-link" href="#">GALLERY</a>
+                            <a class="footer-link" href="#gallery">GALLERY</a>
                         </li>
                         <li class="footer-item">
-                            <a class="footer-link" href="#">CONTACT</a>
+                            <a class="footer-link" href="#contact">CONTACT</a>
                         </li>
                     </ul>
                 </div>
@@ -326,7 +332,7 @@
             $(".owl-carousel").owlCarousel({
 
                 autoPlay: 3000,
-                items: 4,
+                items: 5,
                 itemsDesktop: [1199, 3],
                 itemsDesktopSmall: [979, 3],
                 center: true,
@@ -334,7 +340,7 @@
                 loop: true,
                 responsive: {
                     600: {
-                        items: 4
+                        items: 5
                     }
                 }
             });
