--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     </section>
 
     <!-- gallery section -->
-    <section class="gallery-section" id="gallery">
+    <section class="gallery-section my-5" id="gallery">
         <div class="page-content page-container d-flex flex-column" id="page-content">
             <div class="caption" style="margin: 100px auto 0 ;">
                 <span>MARILEE'S WORK</span>
@@ -200,6 +200,263 @@
                                 <span>Example</span>
                             </div>
                         </div>
+
+                        <div class="item"> <img
+                                src="https://img1.wsimg.com/isteam/ip/78d8a94b-dc58-4231-9e31-abc1931c8c68/awh%203.jpg/:/cr=t:0%25,l:0%25,w:100%25,h:100%25/rs=w:1300px,h:800px"
+                                alt="image" />
+                            <div class="item-bottom white">
+                                <span>Example</span>
+                            </div>
+                        </div>
+
+                        <div class="item"> <img
+                                src="https://img1.wsimg.com/isteam/ip/78d8a94b-dc58-4231-9e31-abc1931c8c68/awh7.jpg/:/cr=t:0%25,l:0%25,w:100%25,h:100%25/rs=w:1300px,h:800px"
+                                alt="image" />
+                            <div class="item-bottom white">
+                                <span>Example</span>
+                            </div>
+                        </div>
+
+                        <div class="item"> <img
+                                src="https://img1.wsimg.com/isteam/ip/78d8a94b-dc58-4231-9e31-abc1931c8c68/awh%204.jpg/:/cr=t:0%25,l:0%25,w:100%25,h:100%25/rs=w:1300px,h:800px"
+                                alt="image" />
+                            <div class="item-bottom white">
+                                <span>Example</span>
+                            </div>
+                        </div>
+
+                        <div class="item"> <img
+                                src="https://img1.wsimg.com/isteam/ip/78d8a94b-dc58-4231-9e31-abc1931c8c68/awh9.jpg/:/rs=w:1300px,h:800px"
+                                alt="image" />
+                            <div class="item-bottom white">
+                                <span>Example</span>
+                            </div>
+                        </div>
+
+                        <div class="item"> <img
+                                src="https://img1.wsimg.com/isteam/ip/78d8a94b-dc58-4231-9e31-abc1931c8c68/awh8.jpg/:/cr=t:0%25,l:0%25,w:100%25,h:100%25/rs=w:1300px,h:800px"
+                                alt="image" />
+                            <div class="item-bottom white">
+                                <span>Example</span>
+                            </div>
+                        </div>
+
+                        <div class="item"> <img
+                                src="https://img1.wsimg.com/isteam/ip/78d8a94b-dc58-4231-9e31-abc1931c8c68/awh15.jpg/:/rs=w:1300px,h:800px"
+                                alt="image" />
+                            <div class="item-bottom white">
+                                <span>Example</span>
+                            </div>
+                        </div>
+
+                        <div class="item"> <img
+                                src="https://img1.wsimg.com/isteam/ip/78d8a94b-dc58-4231-9e31-abc1931c8c68/awh17.jpg/:/rs=w:1300px,h:800px"
+                                alt="image" />
+                            <div class="item-bottom white">
+                                <span>Example</span>
+                            </div>
+                        </div>
+
+                        <div class="item"> <img
+                                src="https://img1.wsimg.com/isteam/ip/78d8a94b-dc58-4231-9e31-abc1931c8c68/awh21.jpg/:/cr=t:0%25,l:0%25,w:100%25,h:100%25/rs=w:1300px,h:800px"
+                                alt="image" />
+                            <div class="item-bottom white">
+                                <span>Example</span>
+                            </div>
+                        </div>
+
+                        <div class="item"> <img
+                                src="https://img1.wsimg.com/isteam/ip/78d8a94b-dc58-4231-9e31-abc1931c8c68/awh19.jpg/:/cr=t:0%25,l:0%25,w:100%25,h:100%25/rs=w:1300px,h:800px"
+                                alt="image" />
+                            <div class="item-bottom white">
+                                <span>Example</span>
+                            </div>
+                        </div>
+
+                        <div class="item"> <img
+                                src="https://img1.wsimg.com/isteam/ip/78d8a94b-dc58-4231-9e31-abc1931c8c68/awh22.jpg/:/cr=t:0%25,l:0%25,w:100%25,h:100%25/rs=w:1300px,h:800px"
+                                alt="image" />
+                            <div class="item-bottom white">
+                                <span>Example</span>
+                            </div>
+                        </div>
+
+                        <div class="item"> <img
+                                src="https://img1.wsimg.com/isteam/ip/78d8a94b-dc58-4231-9e31-abc1931c8c68/awh24.jpg/:/rs=w:1300px,h:800px"
+                                alt="image" />
+                            <div class="item-bottom white">
+                                <span>Example</span>
+                            </div>
+                        </div>
+
+                        <div class="item"> <img
+                                src="https://img1.wsimg.com/isteam/ip/78d8a94b-dc58-4231-9e31-abc1931c8c68/awh29.jpg/:/rs=w:1300px,h:800px"
+                                alt="image" />
+                            <div class="item-bottom white">
+                                <span>Example</span>
+                            </div>
+                        </div>
+
+                        <div class="item"> <img
+                                src="https://img1.wsimg.com/isteam/ip/78d8a94b-dc58-4231-9e31-abc1931c8c68/awh30.jpg/:/cr=t:0%25,l:0%25,w:100%25,h:100%25/rs=w:1300px,h:800px"
+                                alt="image" />
+                            <div class="item-bottom white">
+                                <span>Example</span>
+                            </div>
+                        </div>
+
+                        <div class="item"> <img
+                                src="https://img1.wsimg.com/isteam/ip/78d8a94b-dc58-4231-9e31-abc1931c8c68/awh28.jpg/:/rs=w:1300px,h:800px"
+                                alt="image" />
+                            <div class="item-bottom white">
+                                <span>Example</span>
+                            </div>
+                        </div>
+
+                        <div class="item"> <img
+                                src="https://img1.wsimg.com/isteam/ip/78d8a94b-dc58-4231-9e31-abc1931c8c68/awh25.jpg/:/cr=t:0%25,l:0%25,w:100%25,h:100%25/rs=w:1300px,h:800px"
+                                alt="image" />
+                            <div class="item-bottom white">
+                                <span>Example</span>
+                            </div>
+                        </div>
+
+                        <div class="item"> <img
+                                src="https://img1.wsimg.com/isteam/ip/78d8a94b-dc58-4231-9e31-abc1931c8c68/awh41.jpg/:/rs=w:1300px,h:800px"
+                                alt="image" />
+                            <div class="item-bottom white">
+                                <span>Example</span>
+                            </div>
+                        </div>
+
+                        <div class="item"> <img
+                                src="https://img1.wsimg.com/isteam/ip/78d8a94b-dc58-4231-9e31-abc1931c8c68/awh39-0001.jpg/:/rs=w:1300px,h:800px"
+                                alt="image" />
+                            <div class="item-bottom white">
+                                <span>Example</span>
+                            </div>
+                        </div>
+
+                        <div class="item"> <img
+                                src="https://img1.wsimg.com/isteam/ip/78d8a94b-dc58-4231-9e31-abc1931c8c68/awh38-0001.jpg/:/cr=t:0%25,l:0%25,w:100%25,h:100%25/rs=w:1300px,h:800px"
+                                alt="image" />
+                            <div class="item-bottom white">
+                                <span>Example</span>
+                            </div>
+                        </div>
+
+                        <div class="item"> <img
+                                src="https://img1.wsimg.com/isteam/ip/78d8a94b-dc58-4231-9e31-abc1931c8c68/awh33-0001.jpg/:/cr=t:0%25,l:0%25,w:100%25,h:100%25/rs=w:1300px,h:800px"
+                                alt="image" />
+                            <div class="item-bottom white">
+                                <span>Example</span>
+                            </div>
+                        </div>
+
+                        <div class="item"> <img
+                                src="https://img1.wsimg.com/isteam/ip/78d8a94b-dc58-4231-9e31-abc1931c8c68/awh43.jpg/:/rs=w:1300px,h:800px"
+                                alt="image" />
+                            <div class="item-bottom white">
+                                <span>Example</span>
+                            </div>
+                        </div>
+
+                        <div class="item"> <img
+                                src="https://img1.wsimg.com/isteam/ip/78d8a94b-dc58-4231-9e31-abc1931c8c68/awh42.jpg/:/rs=w:1300px,h:800px"
+                                alt="image" />
+                            <div class="item-bottom white">
+                                <span>Example</span>
+                            </div>
+                        </div>
+
+                        <div class="item"> <img
+                                src="https://img1.wsimg.com/isteam/ip/78d8a94b-dc58-4231-9e31-abc1931c8c68/awh46.jpg/:/rs=w:1300px,h:800px"
+                                alt="image" />
+                            <div class="item-bottom white">
+                                <span>Example</span>
+                            </div>
+                        </div>
+
+                        <div class="item"> <img
+                                src="https://img1.wsimg.com/isteam/ip/78d8a94b-dc58-4231-9e31-abc1931c8c68/awh45.jpg/:/rs=w:1300px,h:800px"
+                                alt="image" />
+                            <div class="item-bottom white">
+                                <span>Example</span>
+                            </div>
+                        </div>
+
+                        <div class="item"> <img
+                                src="https://img1.wsimg.com/isteam/ip/78d8a94b-dc58-4231-9e31-abc1931c8c68/awh47.jpg/:/cr=t:0%25,l:0%25,w:100%25,h:100%25/rs=w:1300px,h:800px"
+                                alt="image" />
+                            <div class="item-bottom white">
+                                <span>Example</span>
+                            </div>
+                        </div>
+
+                        <div class="item"> <img
+                                src="https://img1.wsimg.com/isteam/ip/78d8a94b-dc58-4231-9e31-abc1931c8c68/awh51.jpg/:/cr=t:0%25,l:0%25,w:100%25,h:100%25/rs=w:1300px,h:800px"
+                                alt="image" />
+                            <div class="item-bottom white">
+                                <span>Example</span>
+                            </div>
+                        </div>
+
+                        <div class="item"> <img
+                                src="https://img1.wsimg.com/isteam/ip/78d8a94b-dc58-4231-9e31-abc1931c8c68/awh50.jpg/:/cr=t:0%25,l:0%25,w:100%25,h:100%25/rs=w:1300px,h:800px"
+                                alt="image" />
+                            <div class="item-bottom white">
+                                <span>Example</span>
+                            </div>
+                        </div>
+
+                        <div class="item"> <img
+                                src="https://img1.wsimg.com/isteam/ip/78d8a94b-dc58-4231-9e31-abc1931c8c68/awh55.jpg/:/cr=t:0%25,l:0%25,w:100%25,h:100%25/rs=w:1300px,h:800px"
+                                alt="image" />
+                            <div class="item-bottom white">
+                                <span>Example</span>
+                            </div>
+                        </div>
+
+                        <div class="item"> <img
+                                src="https://img1.wsimg.com/isteam/ip/78d8a94b-dc58-4231-9e31-abc1931c8c68/awh54.jpg/:/rs=w:1300px,h:800px"
+                                alt="image" />
+                            <div class="item-bottom white">
+                                <span>Example</span>
+                            </div>
+                        </div>
+
+                        <div class="item"> <img
+                                src="https://img1.wsimg.com/isteam/ip/78d8a94b-dc58-4231-9e31-abc1931c8c68/awh57.jpg/:/rs=w:1300px,h:800px"
+                                alt="image" />
+                            <div class="item-bottom white">
+                                <span>Example</span>
+                            </div>
+                        </div>
+
+                        <div class="item"> <img
+                                src="https://img1.wsimg.com/isteam/ip/78d8a94b-dc58-4231-9e31-abc1931c8c68/awh63.jpg/:/cr=t:0%25,l:0%25,w:100%25,h:100%25/rs=w:1300px,h:800px"
+                                alt="image" />
+                            <div class="item-bottom white">
+                                <span>Example</span>
+                            </div>
+                        </div>
+
+                        <div class="item"> <img
+                                src="https://img1.wsimg.com/isteam/ip/78d8a94b-dc58-4231-9e31-abc1931c8c68/awh60.jpg/:/cr=t:0%25,l:0%25,w:100%25,h:100%25/rs=w:1300px,h:800px"
+                                alt="image" />
+                            <div class="item-bottom white">
+                                <span>Example</span>
+                            </div>
+                        </div>
+
+                        <div class="item"> <img
+                                src="https://img1.wsimg.com/isteam/ip/78d8a94b-dc58-4231-9e31-abc1931c8c68/awh59.jpg/:/cr=t:0%25,l:0%25,w:100%25,h:100%25/rs=w:1300px,h:800px"
+                                alt="image" />
+                            <div class="item-bottom white">
+                                <span>Example</span>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
@@ -297,6 +554,7 @@
                         <li class="footer-item">
                             <a class="footer-link" href="#contact">CONTACT</a>
                         </li>
+                        <li><a><img src="assets/openSea.png" alt="OpenSea" /></a></li>
                     </ul>
                 </div>
                 <div class="col-md-2">
@@ -308,7 +566,11 @@
                 </div>
             </div>
             <div class="row">
-
+                <div class="col-md-6 mx-auto">
+                    <p style="color: grey">
+                        &copy;COPYRIGHT 2021 MARILEE LEE I ALL RIGHTS RESERVED
+                    </p>
+                </div>
             </div>
         </div>
     </section>
