update the style

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
     <!-- Navigation-->
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar navbar-expand-lg navbar-light mr-auto">
         <!-- <a class="navbar-brand" href="#">Navbar</a> -->
         <img class="navbar-brand logo" src="assets/logo.png" alt="logo" />
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -31,7 +31,7 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto">
+            <ul class="navbar-nav ml-auto mr-5">
                 <li class="nav-item">
                     <a class="nav-link" href="#home">HOME</a>
                 </li>
@@ -118,7 +118,7 @@
                     <hr />
                 </div>
             </div>
-            <h2 style="margin-left: -70px;"><span style="color: #445296;">Art</span> <span
+            <h2 style="margin-left: -70px;"><span style="color: #445296;">&nbsp;&nbsp;&nbsp;Art</span> <span
                     style="color: #ae0235;">Gallery</span></h2>
             <div class="padding">
                 <div class="row container-fluid">
@@ -1302,7 +1302,8 @@
                                 <hr />
                             </div>
                         </div>
-                        <h2><span style="color: #445296;">Lee's </span> <span style="color: #ae0235;">Marketplace</span>
+                        <h2><span style="color: #445296;">&nbsp;&nbsp;Lee's </span> <span
+                                style="color: #ae0235;">Marketplace</span>
                         </h2>
                         <p style="max-width: 650px; margin: 30px auto">
                             We are listing some artworks and paintings for sale on digital marketplaces OpenSea.io, as
@@ -1320,8 +1321,8 @@
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3547.438134937163!2d-80.24040894903311!3d27.236784982905675!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88dee7a3fb2cc37b%3A0xa21f2f9d805b3229!2s1052%20NE%20Country%20Way%2C%20Jensen%20Beach%2C%20FL%2034957%2C%20USA!5e0!3m2!1sen!2s!4v1630417813783!5m2!1sen!2s"
                         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
-                <div class="col-md-6 col-sm-12 px-0" style="background-color: #ae0241; color: white">
-                    <div class="section-title" style="margin: 130px">
+                <div class="col-md-6 col-sm-12 px-0" style="background-color: #cc0033; color: white">
+                    <div class="section-title contact">
                         <div class="caption" style="color: white">
                             <span>GET IN TOUCH</span>
                             <div class="vertical-line">
@@ -1359,7 +1360,7 @@
 
     <!-- footer section -->
     <section>
-        <div class="container">
+        <div class="footer-container">
             <div class="row">
                 <div class="footer col-md-3 mx-auto">
                     <img class="logo" src="assets/logo.png" alt="logo" />
@@ -1383,9 +1384,13 @@
                 </div>
                 <div class="col-md-2">
                     <ul class="footer" style="list-style: none">
-                        <li><i class="fab fa-facebook-f footer-icon"></i></li>
-                        <li><i class="fab fa-twitter footer-icon"></i></li>
-                        <li><i class="fab fa-instagram footer-icon"></i></li>
+                        <li><a href="https://www.facebook.com/" target="_blank"><i
+                                    class="fab fa-facebook-f footer-icon"></i></a>
+                        </li>
+                        <li><a href="https://twitter.com/" target="_blank"><i
+                                    class="fab fa-twitter footer-icon"></i></a></li>
+                        <li><a href="https://www.instagram.com/" target="_blank"><i
+                                    class="fab fa-instagram footer-icon"></i></a></li>
                     </ul>
                 </div>
             </div>
