add the mailto funtion

--- a/index.html
+++ b/index.html
@@ -1345,7 +1345,9 @@
                             <i class="fas fa-phone"></i></i> &nbsp;&nbsp;(772) 225 2500
                         </p>
                         <p>
-                            <i class="far fa-envelope"></i> &nbsp;&nbsp;artistWormhole@gmail.com
+                            <i class="far fa-envelope"></i> &nbsp;&nbsp;<a
+                                href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=artistWormhole@gmail.com"
+                                style="color: white" target="_blank">artistWormhole@gmail.com</a>
                         </p>
                         <p>
                             <i class="far fa-clock"></i> &nbsp;&nbsp;Hours of
