--- a/index.html
+++ b/index.html
@@ -1316,7 +1316,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6 col-sm-12 px-0">
+                <div class="col-md-6 col-sm-12 px-0 map">
                     <iframe class="w-100 h-100"
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3547.438134937163!2d-80.24040894903311!3d27.236784982905675!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88dee7a3fb2cc37b%3A0xa21f2f9d805b3229!2s1052%20NE%20Country%20Way%2C%20Jensen%20Beach%2C%20FL%2034957%2C%20USA!5e0!3m2!1sen!2s!4v1630417813783!5m2!1sen!2s"
                         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
@@ -1398,7 +1398,7 @@
             </div>
             <div class="row">
                 <div class="col-md-6 mx-auto">
-                    <p style="color: grey">
+                    <p style="color: grey; text-align: center;">
                         &copy;COPYRIGHT 2021 MARILEE LEE I ALL RIGHTS RESERVED
                     </p>
                 </div>
