--- a/index.html
+++ b/index.html
@@ -1419,26 +1419,7 @@
         crossorigin="anonymous"></script>
     <script src="js/scripts.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.js"></script>
-    <script>
-        //Jquery auto height
-        $(document).ready(function () {
-            $(".owl-carousel").owlCarousel({
-
-                autoPlay: 3000,
-                items: 5,
-                itemsDesktop: [1199, 3],
-                itemsDesktopSmall: [979, 3],
-                center: true,
-                nav: true,
-                loop: true,
-                responsive: {
-                    600: {
-                        items: 5
-                    }
-                }
-            });
-        });
-    </script>
+    <script src="js/carousel.js"></script>
 </body>
 
 </html>
